# HA-Expiring-Consumables

./: CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: build.yml  test.yml
custom_components/consumable_expiration/: __init__.py  button.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml  strings.json  util.py
custom_components/consumable_expiration/translations/: en.json
custom_components/ha_expiring_consumables/: __init__.py  config_flow.py  const.py  manifest.json
ha_expiring_consumables/: __init__.py  manifest.json
tests/: test_button.py  test_config_flow.py  test_services.py  test_util.py  test_version.py
