[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-expiring-consumables"
version = "0.1.7"
description = "Home Assistant plugin to track consumables"
readme = "README.md"
authors = [{name = "Unknown"}]
requires-python = ">=3.9"

[project.urls]
Home = "https://github.com/user/HA-Expiring-Consumables"

[tool.setuptools.packages.find]
where = ["custom_components"]

[tool.setuptools.package-data]
ha_expiring_consumables = ["manifest.json"]
