[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-expiring-consumables"
version = "0.1.17"
description = "Home Assistant plugin to track consumables"
readme = "README.md"
authors = [{name = "dfiore1230"}]
requires-python = ">=3.9"

[project.urls]
Home = "https://github.com/dfiore1230/HA-Expiring-Consumables"

[tool.setuptools.packages.find]
where = ["custom_components"]

[tool.setuptools.package-data]
ha_expiring_consumables = ["manifest.json"]
